packages/taquito-michel-codec/test/contracts_012/ill_typed/view_toplevel_bad_name_too_long.tz
parameter nat ;
storage nat ;
code { CAR ; NIL operation ; PAIR } ;
view "abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyz" nat nat { UNPAIR ; ADD } ;
